Clean up task3 solution
Replace map juggling with records for the request and error payloads,
drop redundant column names and the Optional plumbing.